# phidata

./: .cursorrules  .gitignore  :memory:  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
cookbook/tools/mcp/mcp_toolbox_demo/: README.md  agent.py  hotel_management_typesafe.py  pyproject.toml  requirements.txt
cookbook/tools/mcp/mcp_toolbox_demo/config/: tools.yaml
libs/agno/: pyproject.toml  requirements.txt
libs/agno/agno/: __init__.py  exceptions.py  filters.py  media.py  metrics.py  table.py  test.py
libs/agno/agno/agent/: __init__.py  _cli.py  _default_tools.py  _hooks.py  _init.py  _managers.py  _messages.py  _response.py  _run.py  _run_options.py  _session.py  _storage.py  _telemetry.py  _tools.py  _utils.py  agent.py  factory.py  metrics.py  protocol.py  remote.py
libs/agno/agno/agents/: base.py
libs/agno/agno/agents/antigravity/: __init__.py  agent.py
libs/agno/agno/api/: api.py  os.py  settings.py
libs/agno/agno/approval/: __init__.py  decorator.py  types.py
libs/agno/agno/client/: os.py
libs/agno/agno/compression/: manager.py
libs/agno/agno/context/: __init__.py  _utils.py  backend.py  mode.py  provider.py
libs/agno/agno/culture/: manager.py
libs/agno/agno/db/: __init__.py  base.py  filter_converter.py  mcp_oauth_store.py  utils.py
libs/agno/agno/environments/: __init__.py  _engine.py  _render.py  environment.py  runner.py
libs/agno/agno/eval/: __init__.py  accuracy.py  agent_as_judge.py  performance.py  reliability.py  suite.py  utils.py
libs/agno/agno/factory/: __init__.py  base.py  utils.py
libs/agno/agno/guardrails/: pii.py  prompt_injection.py
libs/agno/agno/hooks/: decorator.py
libs/agno/agno/knowledge/: __init__.py  agent.py  filesystem.py  knowledge.py  protocol.py  remote_knowledge.py  types.py  utils.py
libs/agno/agno/learn/: __init__.py  config.py  machine.py  schemas.py  utils.py
libs/agno/agno/memory/: __init__.py  manager.py
libs/agno/agno/models/: base.py  defaults.py  fallback.py  message.py  metrics.py  response.py  utils.py
libs/agno/agno/os/: __init__.py  app.py  auth.py  checkpoints.py  config.py  managers.py  mcp.py  mcp_auth.py  mcp_auth_builtin.py  mcp_results.py  router.py  schema.py  scopes.py  service_accounts.py  settings.py  utils.py
libs/agno/agno/reasoning/: anthropic.py  azure_ai_foundry.py  deepseek.py  default.py  gemini.py  groq.py  helpers.py  manager.py  ollama.py  openai.py  vertexai.py
libs/agno/agno/registry/: __init__.py  registry.py
libs/agno/agno/remote/: base.py
libs/agno/agno/run/: agent.py  approval.py  base.py  cancel.py  requirement.py  team.py  workflow.py
libs/agno/agno/scheduler/: __init__.py  cli.py  cron.py  executor.py  manager.py  poller.py
libs/agno/agno/scorer/: __init__.py  _fence.py  _model.py  base.py  code.py  judge.py  tools.py
libs/agno/agno/session/: agent.py  summary.py  team.py  workflow.py
libs/agno/agno/skills/: agent_skills.py  utils.py
libs/agno/agno/team/: __init__.py  _cli.py  _default_tools.py  _hooks.py  _init.py  _managers.py  _messages.py  _response.py  _run.py  _run_options.py  _session.py  _storage.py  _task_tools.py  _telemetry.py  _tools.py  _utils.py  factory.py  mode.py  remote.py  task.py  team.py
libs/agno/agno/tools/: _local_file_utils.py  adanos.py  airflow.py  antigravity.py  api.py  apify.py  arxiv.py  bitbucket.py  brandfetch.py  brightdata.py  browserbase.py  calcom.py  calculator.py  cartesia.py  clickup.py  coding.py  confluence.py  crawl4ai.py  csv_toolkit.py  dalle.py  daytona.py  decorator.py  desi_vocal.py  discord.py  docker.py  docling.py  duckdb.py  duckduckgo.py  e2b.py  eleven_labs.py  email.py  evm.py  exa.py  fal.py  file.py  file_generation.py  financial_datasets.py  firecrawl.py  function.py  giphy.py  (+89 more)
libs/agno/agno/tracing/: exporter.py  setup.py
libs/agno/agno/utils/: agent.py  audio.py  callables.py  common.py  dttm.py  encryption.py  events.py  functions.py  gemini.py  hooks.py  http.py  json_schema.py  knowledge.py  location.py  log.py  mcp.py  media.py  merge_dict.py  message.py  names.py  openai.py  path_safety.py  pprint.py  prompts.py  reasoning.py  response.py  shell.py  streamlit.py  string.py  team.py  timer.py  tokens.py  web.py  yaml_io.py
libs/agno/agno/vectordb/: __init__.py  base.py  score.py
libs/agno/agno/workflow/: __init__.py  agent.py  cel.py  condition.py  factory.py  loop.py  parallel.py  remote.py  router.py  step.py  steps.py  types.py  workflow.py
libs/agno/migrations/: README.md  migrate_mysql.py  migrate_postgres.py  migrate_singlestore.py  migrate_sqlite.py
libs/agno/scripts/: migrate_to_v2.py  release_manual.sh
libs/agno/tests/integration/: conftest.py  test_basic.py  test_os_basic.py
libs/agno/tests/system/: Dockerfile.adk  Dockerfile.agno_a2a  Dockerfile.gateway  Dockerfile.remote  README.md  __init__.py  adk_server.py  agno_a2a_server.py  conftest.py  docker-compose.yaml  gateway_server.py  pytest.ini  remote_server.py  requirements.txt  run_tests.sh  test_a2a_routes.py  test_agents_routes.py  test_agui_routes.py  test_config_routes.py  test_evals_routes.py  test_session_routes.py  test_teams_routes.py  test_utils.py  test_workflows_routes.py
libs/agno/tests/unit/: response.py  test_fallback.py  test_filter_converter.py  test_filters.py  test_learning_machine.py  test_learning_message_filtering.py  test_model_type.py  test_trace_search_api.py
libs/agnoctl/: README.md  pyproject.toml
libs/agnoctl/agnoctl/: __init__.py  console.py  discovery.py  errors.py  http.py  main.py  mcp_client.py
libs/agnoctl/agnoctl/clients/: __init__.py  base.py  claude_code.py  claude_desktop.py  codex.py  cursor.py
libs/agnoctl/agnoctl/commands/: _common.py  connect.py  create.py  disconnect.py  lifecycle.py  status.py  tokens.py
libs/agnoctl/scripts/: format.sh  validate.sh
libs/agnoctl/tests/: conftest.py  test_adapters.py  test_claude_desktop.py  test_connect_cmd.py  test_create_lifecycle.py  test_disconnect_cmd.py  test_discovery.py  test_main.py  test_mcp_client.py  test_security.py  test_status_cmd.py  test_tokens_cmd.py
(+7493 files in other folders)
