[project]
name = "agno"
version = "2.7.0"
description = "The programming language for agentic software."
requires-python = ">=3.9,<4"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  {name = "Agno Team", email = "hello@agno.com"}
]
keywords = ["agno", "agentos", "agents"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # Floor at the latest *published* agnoctl: resolvers install the newest
  # anyway, and a floor referencing an unpublished version breaks every
  # from-source install in the merge-to-publish window of a release.
  "agnoctl>=0.1.0a5",
  "docstring-parser",
  # Prevent the request-smuggling CVE in h11 < 0.16
  "h11>=0.16.0",
  "httpx[http2]",
  "packaging",
  "pydantic-settings",
  "pydantic",
  "pyyaml",
  "rich",
  "typing-extensions",
]

[project.optional-dependencies]
dev = [
  "mypy==2.1.0",
  "ruff==0.15.20",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "pytest-mock==3.15.1",
  "timeout-decorator",
  "types-pyyaml",
  "types-aiofiles",
  "fastapi",
  "python-multipart>=0.0.18",
  "uvicorn",
  "websockets",
  "PyJWT",
  "mcp",
  "fastmcp",
  "openai",
  "ddgs",
  "fakeredis",
  "xlwt",
  "types-greenlet",
  "opentelemetry-sdk",
  "sqlalchemy",
  "aiosqlite",
  "greenlet",
  # First-party interfaces exercised by the unit suite
  "agno[slack]",
  "agno[agui]",
  "agno[a2a]",
]

# AgentOS server bundle
os = ["fastapi", "python-multipart>=0.0.18", "uvicorn", "websockets", "sqlalchemy", "PyJWT", "opentelemetry-sdk", "openinference-instrumentation-agno", "agno[scheduler]"]
mcp = ["mcp>=1.9.2", "fastmcp"]
scheduler = ["croniter>=1.3", "pytz>=2023.3"]

# Dependencies for Telemetry
opentelemetry = ["opentelemetry-sdk", "opentelemetry-exporter-otlp"]
weave = ["weave"]
openlit = ["openlit", "agno[opentelemetry]"]
arize = ["arize-phoenix", "agno[opentelemetry]", "opentelemetry-exporter-otlp-proto-grpc", "opentelemetry-distro"]
langfuse = ["langfuse"]

# Dependencies for Models
anthropic = ["anthropic"]
aws-bedrock = ["boto3", "aioboto3"]
azure = ["azure-ai-inference", "aiohttp"]
cerebras = ["cerebras-cloud-sdk"]
cohere = ["cohere"]
google = ["google-genai>=1.52.0", "pydantic>=2.12.5"]
groq = ["groq"]
ibm = ["ibm-watsonx-ai"]
infinity = ["infinity_client"]
litellm = ["litellm<=1.82.6"]
lmstudio = ["lmstudio"]
meta = ["llama-api-client"]
mistral = ["mistralai"]
ollama = ["ollama"]
openai = ["openai"]
portkey = ["portkey-ai"]

# Dependencies for Token Counting
tokenizers = ["tiktoken", "tokenizers"]

# Dependencies for Workflow Expression Evaluation
cel = ["cel-python"]

# Dependencies for Tools
agentql = ["agentql"]
apify = ["apify-client"]
arxiv = ["arxiv"]
brave = ["brave-search"]
browserbase = ["browserbase", "playwright"]
cartesia = ["cartesia"]
confluence = ["atlassian-python-api"]
crawl4ai = ["crawl4ai>=0.6.3"]
daytona = ["daytona"]
ddg = ["ddgs"]
docling = ["docling"]
duckdb = ["duckdb"]
elevenlabs = ["elevenlabs"]
evm = ["web3"]
exa = ["exa_py>=2.0.0"]
fal = ["fal_client"]
firecrawl = ["firecrawl-py==3.4.0"]
github = ["PyGithub"]
gitlab = ["python-gitlab", "httpx"]
gmail = ["google-api-python-client", "google-auth-httplib2", "google-auth-oauthlib"]
google-bigquery = ["google-cloud-bigquery"]
google-slides = ["google-api-python-client", "google-auth-httplib2", "google-auth-oauthlib"]
googlemaps = ["googlemaps", "google-maps-places"]
matplotlib = ["matplotlib"]
mem0 = ["mem0ai"]
memori = ["memori>=3.0.5"]
neo4j = ["neo4j"]
newspaper = ["newspaper4k", "lxml_html_clean"]
notion = ["notion-client"]
opencv = ["opencv-python"]
oxylabs = ["oxylabs"]
parallel = ["parallel-web>=1.0"]
psycopg = ["psycopg-binary", "psycopg"]
redshift = ["redshift-connector"]
reportlab = ["reportlab"]
salesforce = ["simple-salesforce"]
scavio = ["scavio"]
scrapegraph = ["scrapegraph-py>=2.0.0"]
seltz = ["seltz>=0.2.0"]
tavily = ["tavily-python"]
telegram = ["pyTelegramBotAPI>=4.32.0", "aiohttp"]
todoist = ["todoist-api-python"]
trafilatura = ["trafilatura"]
twelvelabs = ["twelvelabs>=1.2.8"]
valyu = ["valyu"]
webex = ["webexpythonsdk"]
whatsapp-crypto = ["cryptography>=41.0"]
yfinance = ["yfinance"]
you-com = []
youtube = ["youtube_transcript_api"]
zep = ["zep-cloud"]

# Dependencies for Storage
async-mongo = ["pymongo>=4.9", "motor"]
async-postgres = ["asyncpg"]
firestore = ["google-cloud-firestore"]
gcs = ["google-cloud-storage"]
mysql = ["pymysql", "asyncmy"]
postgres = ["psycopg-binary"]
redis = ["redis", "redisvl>=0.12.1"]
sql = ["sqlalchemy"]
sqlite = ["sqlalchemy", "aiosqlite"]

# Dependencies for Vector databases
cassandra = ["cassio"]
chromadb = ["chromadb"]
clickhouse = ["clickhouse-connect"]
couchbase = ["couchbase"]
lancedb = ["lancedb>=0.26.0"]
milvusdb = ["pymilvus>=2.5.10"]
mongodb = ["pymongo[srv]"]
pgvector = ["pgvector"]
pinecone = ["pinecone==5.4.2"]
pylance = ["pylance"]
qdrant = ["qdrant-client"]
singlestore = ["sqlalchemy"]
surrealdb = ["surrealdb>=1.0.4"]
upstash = ["upstash-vector"]
weaviate = ["weaviate-client"]

# Dependencies for Knowledge
chonkie = [
    "chonkie[semantic,code]>=1.6.7",
]
csv = ["aiofiles"]
docx = ["python-docx"]
excel = ["openpyxl", "xlrd"]
markdown = ["unstructured<0.18.31", "markdown", "aiofiles"]
pdf = ["pypdf", "rapidocr_onnxruntime"]
pptx = ["python-pptx"]
text = ["aiofiles"]

# Dependencies for AG-UI integration
agui = ["ag-ui-protocol>=0.1.15", "jsonpatch>=1.33"]

# Dependencies for A2A integration
a2a = ["a2a-sdk>=0.3.0,<1.0"]

# Dependencies for Slack integration
slack = ["slack_sdk>=3.40.0", "aiohttp>=3.7.3,<4"]

# Dependencies for Embedders
huggingface = [
    "huggingface-hub",
]
vllm = ["vllm"]

# Dependencies for Performance
performance = ["memory_profiler"]

# Dependencies for running cookbooks
cookbooks = ["inquirer", "email_validator"]

# Dependencies for Docker
docker = ["agno-infra[docker]"]

# Dependencies for AWS
aws = ["agno-infra[aws]", "agno-infra[docker]"]

infra = ["agno-infra"]

# All models
models = [
  "agno[anthropic]",
  "agno[aws-bedrock]",
  "agno[azure]",
  "agno[cerebras]",
  "agno[cohere]",
  "agno[google]",
  "agno[groq]",
  "agno[ibm]",
  # "agno[infinity]",  # Excluded: infinity_client pins httpx<0.28.0, unresolvable next to a2a-sdk (httpx>=0.28.1) in agno[tests]
  # "agno[litellm]",  # Temporarily disabled - litellm compromised on PyPI (March 24, 2026)
  "agno[lmstudio]",
  "agno[meta]",
  # "agno[mistral]",  # Temporarily disabled - mistralai quarantined on PyPI (May 12, 2026)
  "agno[ollama]",
  "agno[openai]",
  "agno[portkey]",
]

# All tools
tools = [
  "agno[agentql]",
  "agno[apify]",
  "agno[arxiv]",
  # "agno[brave]",  # Excluded: brave-search 0.2.0 ships invalid metadata (bad httpx specifier) that uv cannot parse; test_setup.sh installs it with --no-deps
  "agno[browserbase]",
  "agno[cartesia]",
  "agno[confluence]",
  # "agno[crawl4ai]",  # Excluded: depends on litellm, which was compromised on PyPI (March 24, 2026)
  "agno[daytona]",
  "agno[ddg]",
  "agno[docling]",
  "agno[duckdb]",
  "agno[elevenlabs]",
  "agno[evm]",
  "agno[exa]",
  "agno[fal]",
  "agno[firecrawl]",
  "agno[github]",
  "agno[gitlab]",
  "agno[gmail]",
  "agno[google-bigquery]",
  "agno[google-slides]",
  "agno[googlemaps]",
  "agno[matplotlib]",
  "agno[mcp]",
  "agno[mem0]",
  "agno[memori]",
  "agno[neo4j]",
  "agno[newspaper]",
  "agno[notion]",
  "agno[opencv]",
  "agno[oxylabs]",
  "agno[parallel]",
  "agno[psycopg]",
  "agno[redshift]",
  "agno[reportlab]",
  "agno[salesforce]",
  "agno[scavio]",
  "agno[scrapegraph]",
  "agno[seltz]",
  "agno[tavily]",
  "agno[telegram]",
  "agno[todoist]",
  "agno[trafilatura]",
  "agno[twelvelabs]",
  "agno[valyu]",
  "agno[webex]",
  "agno[whatsapp-crypto]",
  "agno[yfinance]",
  "agno[you-com]",
  "agno[youtube]",
  "agno[zep]",
]

# All storage
storage = [
  "agno[async-mongo]",
  "agno[async-postgres]",
  "agno[firestore]",
  "agno[gcs]",
  "agno[mysql]",
  "agno[postgres]",
  "agno[redis]",  # also listed under vectordbs (redis serves both roles)
  "agno[sql]",
  "agno[sqlite]",
]

# All vector databases
vectordbs = [
  "agno[cassandra]",
  "agno[chromadb]",
  "agno[clickhouse]",
  "agno[couchbase]",
  "agno[lancedb]",
  "agno[milvusdb]",
  "agno[mongodb]",
  "agno[pgvector]",
  "agno[pinecone]",
  "agno[pylance]",
  "agno[qdrant]",
  "agno[redis]",  # also listed under storage (redis serves both roles)
  "agno[singlestore]",
  "agno[surrealdb]",
  "agno[upstash]",
  "agno[weaviate]",
]

# All knowledge
knowledge = [
  "agno[chonkie]",
  "agno[csv]",
  "agno[docling]",  # also a tool; parses docs for knowledge
  "agno[docx]",
  "agno[excel]",
  "agno[markdown]",
  "agno[pdf]",
  "agno[pptx]",
  "agno[text]",
]

# All embedders
embedders = [
  "agno[huggingface]",
  # "agno[vllm]",  # Excluded: vllm has no CPU-only install path (uv backtracks to ancient sdists that require CUDA to build); keep the extra for direct installs on GPU hosts
]

# All libraries for testing
tests = [
    "agno[a2a]",
    "agno[slack]",
    "agno[dev]",
    "agno[models]",
    "agno[tools]",
    "agno[storage]",
    "agno[vectordbs]",
    "agno[knowledge]",
    "agno[embedders]",
    "agno[performance]",
    "agno[cookbooks]",
    "agno[agui]",
    "agno[integration-tests]",
    "twine",
    "build",
    "grpcio>=1.76.0",
]

# Models integration test dependencies
integration-tests = [
    "exa_py>=2.0.0",
    "ddgs",
    "yfinance",
    "sqlalchemy",
    "Pillow",
    "fastmcp",
    "PyJWT",
    # Implements @pytest.mark.flaky(reruns=N); without it the mark is a
    # silent no-op and model-nondeterminism retries never happen.
    "pytest-rerunfailures",
    # Implements @pytest.mark.timeout(N): converts hung provider streams into
    # test failures instead of wedging a CI job until the 6-hour job timeout.
    "pytest-timeout",
]

# Dependencies for demo application
demo = [
    "agno[dev]",
    "agno[scheduler]",
    "anthropic",
    "chromadb",
    "ddgs",
    "duckdb",
    "exa-py>=2.0.0",
    "fastapi",
    "python-multipart>=0.0.18",
    "uvicorn",
    "websockets",
    "google-genai",
    "matplotlib",
    "mcp",
    "nest_asyncio",
    "openai",
    "openinference-instrumentation-agno",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "pandas",
    "parallel-web>=1.0",
    "pgvector",
    "pillow",
    "psycopg[binary]",
    "pypdf",
    "sqlalchemy",
    "yfinance",
    "youtube-transcript-api",
    "claude-agent-sdk",
    "langgraph",
    "langchain-openai",
    "dspy",
]

[project.scripts]
agno = "agnoctl.main:app"

[project.urls]
Homepage = "https://agno.com"
Documentation = "https://docs.agno.com"
Repository = "https://github.com/agno-agi/agno"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agno*"]

[tool.setuptools.package-data]
agno = ["py.typed"]
include = ["LICENSE"]

[tool.pytest.ini_options]
log_cli = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py39"
# Ignore `F401` (import violations) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
disable_error_code = ["override"]
plugins = ["pydantic.mypy"]
exclude = ["tests*"]

[[tool.mypy.overrides]]
module = [
  "a2a.*",
  "ag_ui.*",
  "agentql.*",
  "aioboto3.*",
  "aiohttp.*",
  "aiofiles.*",
  "altair.*",
  "anthropic.*",
  "apify_client.*",
  "arxiv.*",
  "atlassian.*",
  "azure.ai.inference.*",
  "azure.core.*",
  "boto3.*",
  "botocore.*",
  "bs4.*",
  "bson.*",
  "brave.*",
  "browserbase.*",
  "cassio.*",
  "cerebras.*",
  "cerebras_cloud_sdk.*",
  "chonkie.*",
  "chromadb.*",
  "claude_agent_sdk.*",
  "clickhouse_connect.*",
  "clip.*",
  "cohere.*",
  "crawl4ai.*",
  "daytona.*",
  "daytona_api_client.*",
  "discord.*",
  "docker.*",
  "docling.*",
  "dspy.*",
  "docx.*",
  "duckdb.*",
  "ddgs.*",
  "email_validator.*",
  "e2b_code_interpreter.*",
  "eth_account.*",
  "exa_py.*",
  "seltz.*",
  "fastapi.*",
  "fastembed.*",
  "fastmcp.*",
  "filetype.*",
  "firecrawl.*",
  "github.*",
  "gitlab.*",
  "google.*",
  "google_auth_httplib2.*",
  "googlemaps.*",
  "google_maps_places.*",
  "google_auth_oauthlib.*",
  "googleapiclient.*",
  "httplib2.*",
  "groq.*",
  "hexbytes.*",
  "huggingface_hub.*",
  "ibm_watsonx_ai.*",
  "imghdr.*",
  "infinity_client.*",
  "jira.*",
  "jsonpatch.*",
  "jwt.*",
  "kubernetes.*",
  "lancedb.*",
  "langchain_core.*",
  "langchain.*",
  "llama_index.*",
  "llama_api_client.*",
  "linkup.*",
  "litellm.*",
  "matplotlib.*",
  "mem0.*",
  "memori.*",
  "mcp.*",
  "notion_client.*",
  "memory_profiler.*",
  "mistralai.*",
  "mlx_whisper.*",
  "neo4j.*",
  "nest_asyncio.*",
  "newspaper.*",
  "numpy.*",
  "ollama.*",
  "openpyxl.*",
  "openai.*",
  "cv2.*",
  "openbb.*",
  "pandas.*",
  "pgvector.*",
  "PIL.*",
  "pinecone_text.*",
  "pinecone.*",
  "portkey_ai.*",
  "playwright.sync_api.*",
  "psycopg.*",
  "pyarrow.*",
  "pycountry.*",
  "pymongo.*",
  "pypdf.*",
  "pytz.*",
  "qdrant_client.*",
  "rapidocr_onnxruntime.*",
  "redis.*",
  "redisvl.*",
  "replicate.*",
  "requests.*",
  "scavio.*",
  "scrapegraph_py.*",
  "sentence_transformers.*",
  "serpapi.*",
  "setuptools.*",
  "simplejson.*",
  "slack_sdk.*",
  "spider.*",
  "sqlalchemy.*",
  "starlette.*",
  "streamlit.*",
  "tavily.*",
  "telebot.*",
  "textract.*",
  "timeout_decorator.*",
  "tiktoken.*",
  "tokenizers.*",
  "torch.*",
  "todoist_api_python.*",
  "tweepy.*",
  "twelvelabs.*",
  "twilio.*",
  "tzlocal.*",
  "upstash_vector.*",
  "urllib3.*",
  "uvicorn.*",
  "valyu.*",
  "vertexai.*",
  "voyageai.*",
  "weaviate.*",
  "web3.*",
  "webexpythonsdk.*",
  "wikipedia.*",
  "yaml.*",
  "yfinance.*",
  "youtube_transcript_api.*",
  "couchbase.*",
  "acouchbase.*",
  "zep_cloud.*",
  "oxylabs.*",
  "parallel.*",
  "redshift_connector.*",
  "reportlab.*",
  "surrealdb.*",
  "trafilatura.*",
  "xlrd.*",
  "celpy.*"
]
ignore_missing_imports = true
